[package]
name = "cms-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Backend
axum = { version = "0.7.4", features = ["macros"] }
axum-macros = "0.4.1"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["fs", "trace", "cors"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "time",
  "uuid",
] }

chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde"] }

# Database
# libsql-client = "0.33.2"

# Error handling
anyhow = "1.0.79"

# Serde
serde = "1.0.195"
serde_json = "1.0.111"

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Env
dotenv = "0.15.0"

[profile.release]
lto = true
